@@ -1,6 +1,6 @@
 {
-  "count": 27,
-  "uniques": 12,
+  "count": 30,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-05-18T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
