@@ -1,3 +1,10 @@
+2022-06-01T01:40:54Z:
+* notice: last 14d: unq all: 13 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 167 303 / 186 330
+* notice: next accum: outdated-unq outdated-all / unq all: 167 303 / 188 333
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-05-31]
+
 2022-05-31T16:24:33Z:
 * notice: last 14d: unq all: 12 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 166 302 / 186 330
